@@ -1,0 +1,64 @@
+# -*- coding: utf-8 -*-
+#
+# File: testUtils.py
+#
+# Copyright (c) 2017 by Imio.be
+#
+# GNU General Public License (GPL)
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+# 02110-1301, USA.
+#
+
+from Products.PloneMeeting.utils import validate_item_assembly_value
+from Products.PloneMeeting.tests.PloneMeetingTestCase import PloneMeetingTestCase
+
+ASSEMBLY_CORRECT_VALUE = u'[[Text]][[Text]]'
+ASSEMBLY_WRONG_VALUE = u'[[Text Text'
+
+
+class testUtils(PloneMeetingTestCase):
+    '''Tests the utils methods.'''
+
+    def test_pm_Validate_item_assembly_value(self):
+        """This will check the itemAssembly validity regarding [[ and ]]."""
+        # empty value
+        self.assertTrue(validate_item_assembly_value(u''))
+        # correct values
+        self.assertTrue(validate_item_assembly_value(ASSEMBLY_CORRECT_VALUE))
+        self.assertTrue(validate_item_assembly_value(u'[[Text]] Text Text [[Text]]'))
+        self.assertTrue(validate_item_assembly_value(u'[[Text]] Text Text [[Text]]'))
+        self.assertTrue(validate_item_assembly_value(u'Text Text Text [[Text]]'))
+        self.assertTrue(validate_item_assembly_value(u'[[Text]] Text Text Text'))
+        self.assertTrue(validate_item_assembly_value(u'Text Text [[Text]] Text'))
+        # wrong values
+        self.assertFalse(validate_item_assembly_value(ASSEMBLY_WRONG_VALUE))
+        self.assertFalse(validate_item_assembly_value(u'[[Text [[Text'))
+        self.assertFalse(validate_item_assembly_value(u'[[Text [[Text'))
+        self.assertFalse(validate_item_assembly_value(u']]Text [[Text'))
+        self.assertFalse(validate_item_assembly_value(u'Text [[Text'))
+        self.assertFalse(validate_item_assembly_value(u'Text Text]]'))
+
+        # we have a special case, if REQUEST contains 'initial_edit', then validation
+        # is bypassed, this let's edit an old wrong value
+        self.request.set('initial_edit', u'1')
+        self.assertTrue(validate_item_assembly_value(ASSEMBLY_WRONG_VALUE))
+
+
+def test_suite():
+    from unittest import TestSuite, makeSuite
+    suite = TestSuite()
+    suite.addTest(makeSuite(testUtils, prefix='test_pm_'))
+    return suite
